# starter-rust-webui-angular-rspack

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRDPARTY_VERSIONS.md  app.db  build-frontend.js  build.rs  justfile  run.sh
config/: app.config.toml
docs/: 00-index.md  02-architecture.md  03-duckdb-crud-production.md  04-api-reference.md  05-development-workflow.md  06-deployment-production.md  ABSTRACTION_AUDIT.md  DATA_PERSISTENCE_GUIDE.md  DEMO_IMPLEMENTATION.md  DOCUMENTATION_MENU_FIX.md  MAINTAINABILITY_AUDIT.md  PROFESSIONAL_DEMOS.md  REFACTORING_PHASE1_COMPLETE.md  SECURITY_AUDIT_PLAN.md  VEGA_CHARTS_INTEGRATION.md  demo_duckdb_crud.md  demo_features.md  demo_websocket.md
docs/archive/: 01-overview.md  03-changelog.md  04-build-system.md  demo_checklist.md  demo_sqlite_crud.md
frontend-alt99/frontend/: package.json
scripts/: generate-docs-manifest.js
src/: main.rs
src/app/: bootstrap.rs  mod.rs  runtime.rs  startup.rs
src/core/: error.rs  errors.rs  mod.rs  service_registry.rs
static/js/: angular-0.6766cb69bd324f90.js  angular-0.e1e65004fb37468b.js  angular-2.c7ff7e0a605dfc53.js  angular-4.aedac12949f8ceda.js  angular-5.5508887b6b8945c1.js  angular-5.fed8c2fa6bc25a11.js  angular-6.67a446d23282c237.js  angular-7.7b473510e89d667a.js  angular-e7f77611.bc0641ec7f668d17.js  main.js  main~0.9bf0169deced01d2.js  main~0.b18cfe96b921bc0f.js  main~1.930b7075cd9685a9.js  main~1.9f64ebb724bc2c64.js  main~2.6ed5f125977b4845.js  main~3.a5724ba3a1044bc8.js  vendor-0.3ded978a2b12c2a5.js  vendor-10.03238aa8eb56b2ce.js  vendor-13.29b74b8c7290171e.js  vendor-13.b65e908244552afa.js  vendor-14.a0bbe2768f6b6d2d.js  vendor-4.affd49f95c11d3fc.js  vendor-5.6b1d4dfc01d7a98e.js  (+4 more)
(+101 files in other folders)
