[package]
name = "rustwebui-app"
version = "1.0.0"
edition = "2021"
description = "Rust WebUI Application with SQLite"
authors = ["Developer"]

[dependencies]
# Core
webui-rs = { git = "https://github.com/webui-dev/rust-webui", branch = "main" }
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"

# Serialization (JSON only - remove unused formats)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
backtrace = "0.3"
ctrlc = "3.4"

# Configuration & System
dirs = "5.0"
tempfile = "3.8"
notify = "6.1"
open = "5.0"
hostname = "0.3"
whoami = "2.1"
num_cpus = "1.17"

# File operations
walkdir = "2.3"

# Platform-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "processthreadsapi", "sysinfoapi", "fileapi", "winbase", "winnt", "handleapi", "securitybaseapi", "libloaderapi"] }
windows = { version = "0.57", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_UI_Shell"] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

# Build dependencies
[build-dependencies]
cc = "1.0"
walkdir = "2.3"
toml = "0.8"

# Profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
debug = false

# Package metadata
[package.metadata.wix]
category = "Application"
description = "Rust WebUI Application"
